[package]
name = "uncpath"
version = "0.1.0"
edition = "2021"
authors = ["UNCPath Contributors"]
description = "Convert UNC paths to POSIX paths based on mapping configuration"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
once_cell = "1.20"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
